--- a/app/src/main/res/layout/activity_evaluate.xml
+++ b/app/src/main/res/layout/activity_evaluate.xml
@@ -3,36 +3,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context="zack.inc.jp.experimentinfo.EvaluateActivity">
-
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="強さ"
         android:layout_marginTop="18dp"
         android:background="@drawable/layout_shape"
+        android:text="強さ"
         android:textStyle="bold" />
 
-    <FrameLayout
-        android:id="@+id/radioGroup2_frame"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/radioGroup1"
-        android:layout_marginTop="-6dp"
-        android:background="@drawable/layout_shape">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="-6dp"
+            android:background="@drawable/layout_shape">
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/radioGroup1"
+                android:text="踏み込み" />
 
             <RadioGroup
                 android:id="@+id/radioGroup1"
@@ -104,7 +105,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="がっくんブレーキ？" />
+                android:text="ブレーキ終わり(がっくんブレーキ？)" />
 
             <RadioGroup
                 android:id="@+id/radioGroup2"
@@ -182,195 +183,196 @@
             </LinearLayout>
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/radioGroup1"
-            android:layout_gravity="left|top"
-            android:text="踏み込み" />
-    </FrameLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="揺れ"
         android:layout_marginTop="30dp"
+        android:background="@drawable/layout_shape"
+        android:text="揺れ"
         android:textStyle="bold" />
 
-    <RadioGroup
-        android:id="@+id/radioGroup3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/radioGroup2_frame"
-        android:orientation="horizontal">
 
-
-        <RadioButton
-            android:id="@+id/value_3_1"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignTop="@+id/value_2"
-            android:layout_marginStart="23dp"
-            android:text="1" />
+            android:orientation="vertical"
+            android:layout_marginTop="-6dp"
+            android:background="@drawable/layout_shape">
 
-        <RadioButton
-            android:id="@+id/value_3_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/radioGroup"
-            android:layout_marginStart="25dp"
-            android:layout_toEndOf="@+id/value_1"
-            android:text="2" />
+            <RadioGroup
+                android:id="@+id/radioGroup3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-        <RadioButton
-            android:id="@+id/value_3_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/radioGroup"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="25dp"
-            android:text="3" />
 
-        <RadioButton
-            android:id="@+id/value_3_4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/value_3"
-            android:layout_marginStart="25dp"
-            android:layout_toEndOf="@+id/value_3"
-            android:text="4" />
+                <RadioButton
+                    android:id="@+id/value_3_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignTop="@+id/value_2"
+                    android:layout_marginStart="23dp"
+                    android:text="1" />
 
-        <RadioButton
-            android:id="@+id/value_3_5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/value_4"
-            android:layout_marginStart="21dp"
-            android:layout_toEndOf="@+id/value_4"
-            android:text="5" />
+                <RadioButton
+                    android:id="@+id/value_3_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/radioGroup"
+                    android:layout_marginStart="25dp"
+                    android:layout_toEndOf="@+id/value_1"
+                    android:text="2" />
 
-    </RadioGroup>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+                <RadioButton
+                    android:id="@+id/value_3_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="25dp"
+                    android:text="3" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="弱い" />
+                <RadioButton
+                    android:id="@+id/value_3_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="25dp"
+                    android:text="4" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="right"
-            android:text="強い" />
+                <RadioButton
+                    android:id="@+id/value_3_5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="25dp"
+                    android:text="5" />
 
-    </LinearLayout>
+            </RadioGroup>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="弱い" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="強い" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:text="全体評価"
         android:layout_marginTop="30dp"
+        android:background="@drawable/layout_shape"
+        android:text="全体評価"
         android:textStyle="bold" />
-
-    <RadioGroup
-        android:id="@+id/radioGroup4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView"
-        android:orientation="horizontal">
-
-
-        <RadioButton
-            android:id="@+id/value_4_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignTop="@+id/value_2"
-            android:layout_marginStart="23dp"
-            android:text="1" />
-
-        <RadioButton
-            android:id="@+id/value_4_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/radioGroup"
-            android:layout_marginStart="25dp"
-            android:layout_toEndOf="@+id/value_1"
-            android:text="2" />
-
-        <RadioButton
-            android:id="@+id/value_4_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/radioGroup"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="25dp"
-            android:text="3" />
-
-        <RadioButton
-            android:id="@+id/value_4_4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/value_3"
-            android:layout_marginStart="25dp"
-            android:layout_toEndOf="@+id/value_3"
-            android:text="4" />
-
-        <RadioButton
-            android:id="@+id/value_4_5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/value_4"
-            android:layout_marginStart="21dp"
-            android:layout_toEndOf="@+id/value_4"
-            android:text="5" />
-
-    </RadioGroup>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/layout_shape"
+        android:layout_marginTop="-6dp">
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="0dp"
+        <RadioGroup
+            android:id="@+id/radioGroup4"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="悪い" />
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/textView"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="right"
-            android:text="良い" />
 
+            <RadioButton
+                android:id="@+id/value_4_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignTop="@+id/value_2"
+                android:layout_marginStart="23dp"
+                android:text="1" />
+
+            <RadioButton
+                android:id="@+id/value_4_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/radioGroup"
+                android:layout_marginStart="25dp"
+                android:layout_toEndOf="@+id/value_1"
+                android:text="2" />
+
+            <RadioButton
+                android:id="@+id/value_4_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/radioGroup"
+                android:layout_centerHorizontal="true"
+                android:layout_marginStart="25dp"
+                android:text="3" />
+
+            <RadioButton
+                android:id="@+id/value_4_4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/value_3"
+                android:layout_marginStart="25dp"
+                android:layout_toEndOf="@+id/value_3"
+                android:text="4" />
+
+            <RadioButton
+                android:id="@+id/value_4_5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/value_4"
+                android:layout_marginStart="21dp"
+                android:layout_toEndOf="@+id/value_4"
+                android:text="5" />
+
+        </RadioGroup>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="悪い" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:text="良い" />
+
+        </LinearLayout>
     </LinearLayout>
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="54dp"
         android:onClick="saveEval"
-        android:layout_gravity="center_horizontal"
-        android:text="OK" />
+        android:text="OK"
+        android:background="@drawable/layout_shape"/>
 
 
 </LinearLayout>
