--- a/app/src/main/res/layout/activity_driver_info.xml
+++ b/app/src/main/res/layout/activity_driver_info.xml
@@ -3,13 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context="zack.inc.jp.experimentinfo.DriverInfoActivity"
-    android:gravity="center_horizontal">
+    tools:context="zack.inc.jp.experimentinfo.DriverInfoActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -18,8 +17,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:gravity="center_horizontal">
+            android:paddingTop="@dimen/activity_vertical_margin">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -59,15 +59,15 @@
                     android:id="@+id/value_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="男"
-                    android:layout_marginEnd="16dp"/>
+                    android:layout_marginEnd="16dp"
+                    android:text="男" />
 
                 <RadioButton
                     android:id="@+id/value_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="女"
-                    android:layout_marginStart="16dp"/>
+                    android:layout_marginStart="16dp"
+                    android:text="女" />
 
 
             </RadioGroup>
@@ -122,7 +122,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="(例:年５回=y5, 月:m, 週:w)"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/dFrequency"
@@ -156,9 +156,9 @@
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="26dp"
+                android:background="@drawable/layout_shape"
                 android:onClick="nextButton"
-                android:text="Next"
-                android:background="@drawable/layout_shape" />
+                android:text="Next" />
 
         </LinearLayout>
     </ScrollView>
