--- a/app/src/main/res/layout/activity_evaluate.xml
+++ b/app/src/main/res/layout/activity_evaluate.xml
@@ -4,20 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="zack.inc.jp.experimentinfo.EvaluateActivity">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -55,7 +54,7 @@
                         android:id="@+id/value_1_1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="23dp"
+                        android:layout_marginStart="12dp"
                         android:text="1" />
 
                     <RadioButton
@@ -128,9 +127,7 @@
                         android:id="@+id/value_2_1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignTop="@+id/value_2"
-                        android:layout_marginStart="23dp"
+                        android:layout_marginStart="12dp"
                         android:text="1" />
 
                     <RadioButton
@@ -219,9 +216,7 @@
                         android:id="@+id/value_3_1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignTop="@+id/value_2"
-                        android:layout_marginStart="23dp"
+                        android:layout_marginStart="12dp"
                         android:text="1" />
 
                     <RadioButton
@@ -298,8 +293,6 @@
                     android:id="@+id/radioGroup4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_below="@+id/textView"
                     android:orientation="horizontal">
 
 
@@ -307,9 +300,7 @@
                         android:id="@+id/value_4_1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignTop="@+id/value_2"
-                        android:layout_marginStart="23dp"
+                        android:layout_marginStart="12dp"
                         android:text="1" />
 
                     <RadioButton
