--- a/app/src/main/res/layout/activity_evaluetor_info.xml
+++ b/app/src/main/res/layout/activity_evaluetor_info.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:paddingTop="@dimen/activity_vertical_margin"
             android:gravity="center_horizontal">
 
             <TextView
